<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/hacker_background">

    <!-- Question Text -->
    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HackerTextStyle"
        android:text="@string/question_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp" />

    <!-- True Button -->
    <Button
        android:id="@+id/true_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/HackerButtonStyle"
        android:text="@string/true_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/false_button"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        android:layout_marginEnd="8dp" />

    <!-- False Button -->
    <Button
        android:id="@+id/false_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/HackerButtonStyle"
        android:text="@string/false_button"
        app:layout_constraintStart_toEndOf="@id/true_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question_text_view"
        android:layout_marginStart="8dp" />

    <!-- Cheat Button -->
    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HackerButtonStyle"
        android:text="@string/cheat_button"
        app:layout_constraintTop_toBottomOf="@id/false_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Previous Button -->
    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HackerButtonStyle"
        android:text="@string/previous_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Next Button -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HackerButtonStyle"
        android:text="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <!-- Fragment Container for the Crime List -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cheat_button"
        app:layout_constraintBottom_toTopOf="@id/previous_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
